--- a/src/app/features/checkout/components/confirmation/confirmation.component.html
+++ b/src/app/features/checkout/components/confirmation/confirmation.component.html
@@ -1,11 +1,12 @@
 <div appBorderIndicator class="flex flex-row">
     <div appBorderIndicator class="basis-2/3">
-        <app-cart-list [items]="cartItems"></app-cart-list>
+        <app-cart-list [items]="cartItems()"></app-cart-list>
     </div>
     <div appBorderIndicator class="basis-1/3 ">
         <h2 class="text-2xl font-bold text-gray-700">Summary</h2>
         <hr class="w-full my-4 border-gray-200 dark:border-gray-700">
-        <app-confirmation-item-summary name="Shipping option" value="Regular (1 -3 days)"></app-confirmation-item-summary>
+        <app-confirmation-item-summary name="Shipping option"
+            value="Regular (1 -3 days)"></app-confirmation-item-summary>
         <app-confirmation-item-summary name="Items quantity" value="7"></app-confirmation-item-summary>
         <app-confirmation-item-summary name="Payment Method" value="CREDIT CARD"></app-confirmation-item-summary>
         <hr class="w-full my-4 border-gray-200 dark:border-gray-700">
@@ -14,8 +15,7 @@
             <p>$ 1,700,000</p>
         </div>
         <div class="flex justify-center my-8">
-            <button
-                appCheckoutButton>
+            <button appCheckoutButton>
                 Pay
             </button>
         </div>
