feat: add NGXS store and devtools plugin, refactor cart and billing components

--- a/src/app/features/checkout/components/confirmation/confirmation.component.html
+++ b/src/app/features/checkout/components/confirmation/confirmation.component.html
@@ -12,7 +12,7 @@
         <hr class="w-full my-4 border-gray-200 dark:border-gray-700">
         <div class="flex justify-between">
             <p class="text-xl font-bold text-neutral-600">TOTAL:</p>
-            <p>$ 1,700,000</p>
+            <p>$ {{ total() }}</p>
         </div>
         <div class="flex justify-center my-8">
             <button appCheckoutButton>
