feat: add checkout actions and refactor billing/shipping forms
- Introduced  for random checkout generation.
- Updated action types for billing and shipping to reflect checkout context.
- Refactored billing and shipping components to use a form factory service for form creation.
- Enhanced  with new selectors and actions for better state management.

--- a/src/app/features/checkout/components/shipping/shipping.component.html
+++ b/src/app/features/checkout/components/shipping/shipping.component.html
@@ -1,5 +1,5 @@
 <div appBorderIndicator class="flex flex-col">
-  <form [formGroup]="shippingForm">
+  <form [formGroup]="form">
     <fieldset class="space-y-4">
       <legend class="sr-only">Delivery</legend>
       <div>
@@ -29,7 +29,7 @@
       </div>
     </fieldset>
     <div class="flex justify-center my-8">
-      <button appCheckoutButton routerLink="/billing" (click)="onContinue()" [disabled]="!shippingForm.valid" type="button">
+      <button appCheckoutButton routerLink="/billing" (click)="onContinue()" [disabled]="!form.valid" type="button">
         Continue
       </button>
     </div>
