--- a/src/app/features/checkout/components/cart-list/cart-list.component.html
+++ b/src/app/features/checkout/components/cart-list/cart-list.component.html
@@ -21,7 +21,7 @@
                 </tr>
             </thead>
             <tbody>
-                @for (item of items(); track $index) {
+                @for (item of products(); track $index) {
                 <tr
                     class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                     <td class="p-4">
