--- a/src/app/features/checkout/components/cart-list/cart-list.component.html
+++ b/src/app/features/checkout/components/cart-list/cart-list.component.html
@@ -21,14 +21,14 @@
                 </tr>
             </thead>
             <tbody>
-                @for (item of products(); track $index) {
+                @for (product of products(); track $index) {
                 <tr
                     class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
                     <td class="p-4">
-                        <img [src]="item.image" class="w-16" [alt]="item.name">
+                        <img [src]="product.image" class="w-16" [alt]="product.name">
                     </td>
                     <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
-                        {{ item.name }}
+                        {{ product.name }}
                     </td>
                     <td class="px-6 py-4">
                         <div class="flex items-center">
@@ -44,7 +44,7 @@
                             </button> -->
                             <div>
                                 <input class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                                   [value]="item.quantity" type="number" min="1" required />
+                                   [value]="product.quantity" type="number" min="1" required />
                             </div>
                             <!-- <button
                                 class="inline-flex items-center justify-center h-6 w-6 p-1 ms-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-full focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
@@ -59,10 +59,11 @@
                         </div>
                     </td>
                     <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
-                        {{ item.price }}
+                        {{ product.price }}
                     </td>
                     <td class="px-6 py-4">
-                        <a href="#" class="font-medium text-red-600 dark:text-red-500 hover:underline">Remove</a>
+                        <button class="font-medium text-red-600 dark:text-red-500 hover:underline"
+                        (click)="deleteCartProductAction(product)">Remove</button>
                     </td>
                 </tr>
                 }
