--- a/src/app/features/checkout/components/confirmation/confirmation.component.html
+++ b/src/app/features/checkout/components/confirmation/confirmation.component.html
@@ -1,8 +1,8 @@
 <div appBorderIndicator class="flex flex-row">
-    <div appBorderIndicator class="basis-2/3">
+    <div class="basis-2/3 p-2.5 m-2.5">
         <app-cart-list [products]="products()"></app-cart-list>
     </div>
-    <div appBorderIndicator class="basis-1/3 ">
+    <div appBorderIndicator class="basis-1/3 p-8">
         <h2 class="text-2xl font-bold text-gray-700">Summary</h2>
         <hr class="w-full my-4 border-gray-200 dark:border-gray-700">
         <app-confirmation-item-summary name="Shipping option" [value]="summary().shippingOption"></app-confirmation-item-summary>
