--- a/src/app/features/checkout/components/shipping/shipping.component.html
+++ b/src/app/features/checkout/components/shipping/shipping.component.html
@@ -1,37 +1,44 @@
-<div appBorderIndicator class="flex flex-col">
-  <form [formGroup]="form">
-    <fieldset class="space-y-4">
-      <legend class="sr-only">Delivery</legend>
-      <div>
-        <label for="DeliveryStandard"
-          class="flex cursor-pointer justify-between gap-4 rounded-lg border border-gray-100 bg-white p-4 text-sm font-medium shadow-sm hover:border-gray-200 has-[:checked]:border-blue-500 has-[:checked]:ring-1 has-[:checked]:ring-blue-500">
-          <div>
-            <p class="text-gray-700">Regular (3 - 7 Days)</p>
-            <p class="mt-1 text-gray-900">FREE</p>
-          </div>
-
-          <input type="radio" [value]="deliveryOptions.Standard" formControlName="delivery"
-            class="size-5 border-gray-300 text-blue-500" checked />
-        </label>
+<div [formGroup]="form" appBorderIndicator class="flex flex-col">
+  <div class="flex flex-row">
+      <div appBorderIndicator class="basis-1/2">
+          <app-input-text class="mx-2 h-20" title="Fullname" formControlName="fullname"></app-input-text>
+          <app-input-text class="mx-2" title="Address" formControlName="address"></app-input-text>
+          <app-input-text class="mx-2" title="City" formControlName="city"></app-input-text>
       </div>
-
-      <div>
-        <label for="DeliveryPriority"
-          class="flex cursor-pointer justify-between gap-4 rounded-lg border border-gray-100 bg-white p-4 text-sm font-medium shadow-sm hover:border-gray-200 has-[:checked]:border-blue-500 has-[:checked]:ring-1 has-[:checked]:ring-blue-500">
+      <div appBorderIndicator class="basis-1/2">
+        <fieldset class="space-y-4">
+          <legend class="sr-only">Delivery</legend>
           <div>
-            <p class="text-gray-700">Express (1 - 3 Days)</p>
-            <p class="mt-1 text-gray-900">$9.99</p>
+            <label for="DeliveryStandard"
+              class="flex cursor-pointer justify-between gap-4 rounded-lg border border-gray-100 bg-white p-4 text-sm font-medium shadow-sm hover:border-gray-200 has-[:checked]:border-blue-500 has-[:checked]:ring-1 has-[:checked]:ring-blue-500">
+              <div>
+                <p class="text-gray-700">Regular (3 - 7 Days)</p>
+                <p class="mt-1 text-gray-900">FREE</p>
+              </div>
+    
+              <input id="DeliveryStandard" type="radio" [value]="deliveryOptions.Standard" formControlName="delivery"
+                class="size-5 border-gray-300 text-blue-500" checked />
+            </label>
           </div>
-
-          <input type="radio" [value]="deliveryOptions.Express" formControlName="delivery"
-            class="size-5 border-gray-300 text-blue-500" />
-        </label>
+    
+          <div>
+            <label for="DeliveryPriority"
+              class="flex cursor-pointer justify-between gap-4 rounded-lg border border-gray-100 bg-white p-4 text-sm font-medium shadow-sm hover:border-gray-200 has-[:checked]:border-blue-500 has-[:checked]:ring-1 has-[:checked]:ring-blue-500">
+              <div>
+                <p class="text-gray-700">Express (1 - 3 Days)</p>
+                <p class="mt-1 text-gray-900">$9.99</p>
+              </div>
+    
+              <input id="DeliveryPriority" type="radio" [value]="deliveryOptions.Express" formControlName="delivery"
+                class="size-5 border-gray-300 text-blue-500" />
+            </label>
+          </div>
+        </fieldset>
       </div>
-    </fieldset>
-    <div class="flex justify-center my-8">
+  </div>
+  <div class="flex justify-center my-8">
       <button appCheckoutButton routerLink="/billing" (click)="onContinue()" [disabled]="!form.valid" type="button">
-        Continue
+          Continue
       </button>
-    </div>
-  </form>
+  </div>
 </div>
