--- a/src/app/shared/components/input-text/input-text.component.html
+++ b/src/app/shared/components/input-text/input-text.component.html
@@ -1,6 +1,7 @@
 <label [for]="id"
-  class="relative block rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
-  <input class="peer border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
+  class="relative block w-full max-w-md rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
+  <input
+    class="p-2 peer w-full border-none bg-transparent placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
     type="text" [id]="id" [placeholder]="placeholder" [value]="value" (input)="onInput($event)" />
   <span
     class="pointer-events-none absolute start-2.5 top-0 -translate-y-1/2 bg-white p-0.5 text-xs text-gray-700 transition-all peer-placeholder-shown:top-1/2 peer-placeholder-shown:text-sm peer-focus:top-0 peer-focus:text-xs">
