--- a/src/app/features/checkout/components/billing/billing.component.html
+++ b/src/app/features/checkout/components/billing/billing.component.html
@@ -1,10 +1,10 @@
-<div [formGroup]="form" appBorderIndicator class="flex flex-col">
-    <div class="flex flex-row">
-        <div appBorderIndicator class="basis-1/2">
+<div [formGroup]="form" class="flex flex-col container-step">
+    <div class="flex flex-row items-center">
+        <div class="basis-1/2 card-step">
             <app-input-text class="mx-2 h-20" title="DNI" ></app-input-text>
             <app-input-text class="mx-2 h-20" title="Fullname" formControlName="fullname"></app-input-text>
         </div>
-        <div appBorderIndicator class="basis-1/2 pb-8">
+        <div class="basis-1/2 pb-8 card-step">
             <app-input-text class="mx-2" title="Card name" formControlName="cardName"></app-input-text>
             <app-input-text class="mx-2" title="Card number" formControlName="cardNumber"></app-input-text>
             <div class="flex flex-row space-x-2">
