--- a/src/app/features/checkout/components/cart-list/cart-list.component.html
+++ b/src/app/features/checkout/components/cart-list/cart-list.component.html
@@ -1,7 +1,7 @@
 <div class="space-y-4">
     <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-400">
+            <thead class="text-xs uppercase bg-black text-gray-400">
                 <tr>
                     <th scope="col" class="px-16 py-3">
                         <span class="sr-only">Image</span>
@@ -10,10 +10,13 @@
                         Product
                     </th>
                     <th scope="col" class="px-6 py-3">
-                        Qty
+                        Price
                     </th>
                     <th scope="col" class="px-6 py-3">
-                        Price
+                        Quantity
+                    </th>
+                    <th scope="col" class="px-6 py-3">
+                        Amount
                     </th>
                     <th scope="col" class="px-6 py-3">
                         Action
@@ -22,32 +25,35 @@
             </thead>
             <tbody>
                 @if (products().length === 0) {
-                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
-                    <td class="p-4 text-center" colspan="5" >
+                <tr class="bg-gray-800 border-gray-700">
+                    <td class="p-4 text-center" colspan="6" >
                         No hay productos
                     </td>
                 </tr>
                 }
                 @for (product of products(); track $index) {
                 <tr
-                    class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+                    class="border-b  border-gray-700 hover:bg-gray-600">
                     <td class="p-4">
                         <img [src]="product.image" class="w-16" [alt]="product.name">
                     </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
+                    <td class="px-6 py-4 font-semibold text-white">
                         {{ product.name }}
+                    </td>
+                    <td class="px-6 py-4 font-semibold text-white">
+                        {{ product.price }}
                     </td>
                     <td class="px-6 py-4">
                         <div class="flex items-center">
                             <div>
                                 <input
-                                    class="bg-gray-50 w-14 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block px-2.5 py-1 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                                    class="w-14 border text-sm rounded-lg block px-2.5 py-1 bg-gray-700 border-gray-600 placeholder-gray-400 text-white focus:ring-blue-500 focus:border-blue-500"
                                     [value]="product.quantity" (blur)="onProductQuantityChange($event, product)"
                                     type="number" min="1" required />
                             </div>
                         </div>
                     </td>
-                    <td class="px-6 py-4 font-semibold text-gray-900 dark:text-white">
+                    <td class="px-6 py-4 font-semibold text-white">
                         {{ product.price * product.quantity }}
                     </td>
                     <td class="px-6 py-4">
