--- a/src/app/features/checkout/components/cart-list/cart-list.component.html
+++ b/src/app/features/checkout/components/cart-list/cart-list.component.html
@@ -26,14 +26,13 @@
             <tbody>
                 @if (products().length === 0) {
                 <tr class="bg-gray-800 border-gray-700">
-                    <td class="p-4 text-center" colspan="6" >
+                    <td class="p-4 text-center" colspan="6">
                         No hay productos
                     </td>
                 </tr>
                 }
                 @for (product of products(); track $index) {
-                <tr
-                    class="border-b  border-gray-700 hover:bg-gray-600">
+                <tr class="border-b  border-gray-700 hover:bg-gray-600">
                     <td class="p-4">
                         <img [src]="product.image" class="w-16" [alt]="product.name">
                     </td>
@@ -57,8 +56,12 @@
                         {{ product.price * product.quantity }}
                     </td>
                     <td class="px-6 py-4">
-                        <button class="font-medium text-red-600 dark:text-red-500 hover:underline"
-                            (click)="deleteCartProduct(product)">Remove</button>
+                        <button class="text-red-500 hover:text-red-700"
+                            (click)="deleteCartProduct(product)" aria-label="Remove">
+                            <svg class="w-6 h-6" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 7h14m-9 3v8m4-8v8M10 3h4a1 1 0 0 1 1 1v3H9V4a1 1 0 0 1 1-1ZM6 7h12v13a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7Z"/>
+                              </svg>
+                        </button>
                     </td>
                 </tr>
                 }
