--- a/src/app/features/checkout/components/shipping/shipping.component.html
+++ b/src/app/features/checkout/components/shipping/shipping.component.html
@@ -1,43 +1,46 @@
 <div [formGroup]="form" class="container-step flex flex-col">
   <div class="flex flex-row items-center">
-      <div class="basis-1/2 card-step">
-          <app-input-text class="mx-2 h-20" title="Fullname" formControlName="fullname"></app-input-text>
-          <app-input-text class="mx-2" title="Address" formControlName="address"></app-input-text>
-          <app-input-text class="mx-2" title="City" formControlName="city"></app-input-text>
-      </div>
-      <div class="basis-1/2 card-step">
-        <fieldset class="space-y-4">
-          <div>
-            <label for="DeliveryStandard"
-              class="flex cursor-pointer justify-between gap-4 rounded-lg p-4 text-sm font-medium shadow-sm hover:border-gray-200 has-[:checked]:bg-black has-[:checked]:border-blue-500 has-[:checked]:ring-1 has-[:checked]:ring-blue-500">
-              <div>
-                <p class="text-gray-400">Regular (3 - 7 Days)</p>
-                <p class="mt-1 text-white">FREE</p>
-              </div>
-    
-              <input id="DeliveryStandard" type="radio" [value]="deliveryOptions.Standard" formControlName="delivery"
-                class="size-5 border-gray-300 text-blue-500" checked />
-            </label>
-          </div>
-    
-          <div>
-            <label for="DeliveryPriority"
-              class="flex cursor-pointer justify-between gap-4 rounded-lg p-4 text-sm font-medium shadow-sm has-[:checked]:bg-black hover:border-gray-200 has-[:checked]:border-blue-500 has-[:checked]:ring-1 has-[:checked]:ring-blue-500">
-              <div>
-                <p class="text-gray-400">Express (1 - 3 Days)</p>
-                <p class="mt-1 text-white">$9.99</p>
-              </div>
-    
-              <input id="DeliveryPriority" type="radio" [value]="deliveryOptions.Express" formControlName="delivery"
-                class="size-5 border-gray-300 text-blue-500" />
-            </label>
-          </div>
-        </fieldset>
-      </div>
+    <div class="basis-1/2 card-step">
+      <app-input-text class="mx-2 h-20" title="Fullname" formControlName="fullname"></app-input-text>
+      <app-input-text class="mx-2" title="Address" formControlName="address"></app-input-text>
+      <app-input-text class="mx-2" title="City" formControlName="city"></app-input-text>
+    </div>
+    <div class="basis-1/2 card-step">
+      <fieldset class="space-y-4">
+        <div>
+          <label for="DeliveryStandard"
+            class="flex cursor-pointer justify-between gap-4 rounded-lg p-4 text-sm font-medium shadow-sm hover:border-gray-200 has-[:checked]:bg-black has-[:checked]:border-orange-500 has-[:checked]:ring-1 has-[:checked]:ring-orange-500">
+            <div>
+              <p class="text-gray-400">Regular (3 - 7 Days)</p>
+              <p class="mt-1 text-white">FREE</p>
+            </div>
+            <input id="DeliveryStandard" type="radio" [value]="deliveryOptions.Standard" formControlName="delivery"
+              class=" hidden peer" checked />
+            <div class="w-5 h-5 rounded-full border-2 border-orange-500 flex items-center justify-center peer-checked:bg-orange-500">
+              <div class="w-2.5 h-2.5 bg-white rounded-full"></div>
+            </div>
+          </label>
+        </div>
+        <div>
+          <label for="DeliveryPriority"
+            class="flex cursor-pointer justify-between gap-4 rounded-lg p-4 text-sm font-medium shadow-sm has-[:checked]:bg-black hover:border-gray-200 has-[:checked]:border-orange-500 has-[:checked]:ring-1 has-[:checked]:ring-orange-500">
+            <div>
+              <p class="text-gray-400">Express (1 - 3 Days)</p>
+              <p class="mt-1 text-white">$9.99</p>
+            </div>
+            <input id="DeliveryPriority" type="radio" [value]="deliveryOptions.Express" formControlName="delivery"
+              class="hidden peer" />
+            <div class="w-5 h-5 rounded-full border-2 border-orange-500 flex items-center justify-center peer-checked:bg-orange-500">
+              <div class="w-2.5 h-2.5 bg-white rounded-full"></div>
+            </div>
+          </label>
+        </div>
+      </fieldset>
+    </div>
   </div>
   <div class="flex justify-center my-8">
-      <button appCheckoutButton routerLink="/billing" (click)="onContinue()" [disabled]="!form.valid" type="button">
-          Continue
-      </button>
+    <button appCheckoutButton routerLink="/billing" (click)="onContinue()" [disabled]="!form.valid" type="button">
+      Continue
+    </button>
   </div>
 </div>
