--- a/src/app/features/checkout/components/step-indicator/step-indicator.component.html
+++ b/src/app/features/checkout/components/step-indicator/step-indicator.component.html
@@ -1,6 +1,6 @@
 <div class="flex items-center">
     <div class="flex items-center justify-center w-8 h-8 rounded-full border-2" [ngClass]="{
-      'bg-blue-500 text-white border-blue-500': currentStep() >= step(),
+      'bg-orange-500 text-white border-orange-500': currentStep() >= step(),
       'bg-gray-700 text-gray-300 border-gray-300': currentStep() < step()
     }">
         <a [routerLink]="link()" >
