--- a/src/app/shared/components/input-text/input-text.component.html
+++ b/src/app/shared/components/input-text/input-text.component.html
@@ -1,5 +1,5 @@
 <label [for]="id"
-  class="relative block w-full max-w-md rounded-md border border-gray-200 shadow-sm focus-within:border-blue-600 focus-within:ring-1 focus-within:ring-blue-600">
+  class="relative block w-full max-w-md rounded-md border border-gray-200 shadow-sm focus-within:border-orange-600 focus-within:ring-1 focus-within:ring-orange-600">
   <input
     class="p-2.5 peer w-full border-none bg-transparent text-slate-200 placeholder-transparent focus:border-transparent focus:outline-none focus:ring-0"
     type="text" [id]="id" [placeholder]="placeholder" [value]="value" (input)="onInput($event)" />
