--- a/checkout-frontend/src/app/features/checkout/components/cart-list/cart-list.component.html
+++ b/checkout-frontend/src/app/features/checkout/components/cart-list/cart-list.component.html
@@ -34,7 +34,7 @@
                 @for (product of products(); track $index) {
                 <tr class="border-b  border-gray-700 hover:bg-gray-600">
                     <td class="p-4">
-                        <img [src]="product.image" class="w-16" [alt]="product.name">
+                        <img [src]="product.image" class="w-16" [alt]="product.name" (error)="onImageError($event)">
                     </td>
                     <td class="px-6 py-4 font-semibold text-white">
                         {{ product.name }}
