feat: add ngx-toastr for notifications and update checkout process

--- a/checkout-frontend/src/app/features/checkout/components/confirmation/confirmation.component.html
+++ b/checkout-frontend/src/app/features/checkout/components/confirmation/confirmation.component.html
@@ -14,7 +14,7 @@
             <p class="text-base text-green-500">$ {{ summary().amount }}</p>
         </div>
         <div class="flex justify-center my-8">
-            <button appCheckoutButton>
+            <button appCheckoutButton (click)="onConfirm()">
                 Pay
             </button>
         </div>
