--- a/checkout-frontend/src/app/features/checkout/components/shipping/shipping.component.html
+++ b/checkout-frontend/src/app/features/checkout/components/shipping/shipping.component.html
@@ -15,7 +15,7 @@
               <p class="text-gray-400">Regular (3 - 7 Days)</p>
               <p class="mt-1 text-white">FREE</p>
             </div>
-            <input id="DeliveryStandard" type="radio" [value]="deliveryOptions.Standard" formControlName="delivery"
+            <input id="DeliveryStandard" type="radio" [value]="deliveryOptions.FREE" formControlName="delivery"
               class=" hidden peer" checked />
             <div
               class="w-5 h-5 rounded-full border-2 border-orange-500 flex items-center justify-center peer-checked:bg-orange-500">
@@ -30,7 +30,7 @@
               <p class="text-gray-400">Express (1 - 3 Days)</p>
               <p class="mt-1 text-white">$9.99</p>
             </div>
-            <input id="DeliveryPriority" type="radio" [value]="deliveryOptions.Express" formControlName="delivery"
+            <input id="DeliveryPriority" type="radio" [value]="deliveryOptions.EXPRESS" formControlName="delivery"
               class="hidden peer" />
             <div
               class="w-5 h-5 rounded-full border-2 border-orange-500 flex items-center justify-center peer-checked:bg-orange-500">
