--- a/checkout-frontend/src/app/features/checkout/components/checkout-steps/checkout-steps.component.html
+++ b/checkout-frontend/src/app/features/checkout/components/checkout-steps/checkout-steps.component.html
@@ -4,5 +4,18 @@
     <app-step-indicator name="REVIEW & CONFIRMATION" link="/confirmation" [step]="3" [currentStep]="currentStep()" ></app-step-indicator>
 </div>
 <div class="container mx-auto">
-    <ng-content></ng-content>
+    @if (loadingStep()) {
+        <div class="flex flex-col container-step-loader">
+            <div class="flex flex-col items-center justify-center min-h-[200px] space-y-4">
+                <div class="relative flex space-x-2">
+                  <div class="w-8 h-8 bg-blue-400 rounded-full animate-bounce"></div>
+                  <div class="w-8 h-8 bg-blue-400 rounded-full animate-bounce [animation-delay:-0.2s]"></div>
+                  <div class="w-8 h-8 bg-blue-400 rounded-full animate-bounce [animation-delay:-0.4s]"></div>
+                </div>
+                <p class="text-md text-neutral-300">{{loadingStepMessage()}}</p>
+              </div>
+        </div>
+    } @else {
+        <ng-content></ng-content>
+    }
 </div>
