--- a/checkout-frontend/src/app/features/checkout/components/shipping/shipping.component.html
+++ b/checkout-frontend/src/app/features/checkout/components/shipping/shipping.component.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="flex justify-center my-8">
-    <button appCheckoutButton routerLink="/billing" (click)="onContinue()" [disabled]="!form.valid" type="button">
+    <button appCheckoutButton (click)="onContinue()" [disabled]="!form.valid" type="button">
       Continue
     </button>
   </div>
