--- a/checkout-frontend/src/app/features/checkout/components/purchase-created/purchase-created.component.html
+++ b/checkout-frontend/src/app/features/checkout/components/purchase-created/purchase-created.component.html
@@ -20,19 +20,20 @@
         </div>
         <hr class="w-full my-4 border-gray-600">
         <h3 class="text-base font-bold text-orange-500 my-4">Products</h3>
-        <div *ngIf="purchase().shipping">
+        <div *ngIf="purchase().order?.products">
             @for (product of purchase().order.products; track product.sku) {
             <div class="flex justify-between">
-                <span class="font-semibold text-gray-500">{{product.sku}} {{product.name}}:</span>
-                <span class="text-gray-300">{{product.price}} {{product.quantity}} {{product.quantity *
-                    product.price}}</span>
+                <span class="text-sm font-semibold text-gray-500">{{product.name}} x ({{product.quantity}} units):</span>
+                <div class="text-sm">
+                    <div class="text-sm text-gray-300">{{product.price * product.quantity | currency:'USD':'symbol':'1.2-2'}}</div>
+                </div>
             </div>
             }
         </div>
         <hr class="w-full my-4 border-gray-600">
         <div *ngIf="purchase().payment" class="flex justify-between items-center">
             <p class="text-base font-bold text-gray-500">TOTAL:</p>
-            <p class="text-2xl text-green-500">$ {{ purchase().payment.amount }}</p>
+            <p class="text-2xl text-green-500">{{ purchase().payment.amount | currency:'USD':'symbol':'1.2-2'}}</p>
         </div>
     </div>
 </div>
