--- a/checkout-frontend/src/app/features/checkout/components/cart-list/cart-list.component.html
+++ b/checkout-frontend/src/app/features/checkout/components/cart-list/cart-list.component.html
@@ -40,7 +40,7 @@
                         {{ product.name }}
                     </td>
                     <td class="px-6 py-4 font-semibold text-white">
-                        {{ product.price }}
+                        {{ product.price | currency:'USD':'symbol':'1.2-2'}}
                     </td>
                     <td class="px-6 py-4">
                         <div class="flex items-center">
@@ -53,7 +53,7 @@
                         </div>
                     </td>
                     <td class="px-6 py-4 font-semibold text-white">
-                        {{ product.price * product.quantity }}
+                        {{ product.price * product.quantity | currency:'USD':'symbol':'1.2-2'}}
                     </td>
                     <td class="px-6 py-4">
                         <button class="text-red-500 hover:text-red-700"
